Fixing links and collapsing menu when clicked

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@ body {
   font-family: myFont;
 }
 
-a {cursor: pointer; color: gray;}
+a {color: gray;}
 a:hover {
     color: white;
 }
@@ -40,5 +40,11 @@ textarea {
     margin-left: 30px;
     margin-right: 30px;
     max-width: 94%;
+  }
+}
+
+@media (max-width: 768px) {
+  .rounded {
+    border: solid 4px white;
   }
 }
